# MealMCP

./: .gitignore  CLAUDE.md  OAUTH_SETUP.md  README.md  README_FLASK_MIGRATION.md  README_MULTIUSER.md  README_MULTIUSER_SIMPLE.md  README_OAUTH_TRACING.md  app.py  app_final.py  app_flask.py  cleanup_tokens.py  cli.py  config.py  constants.py  datastore_postgresql.py  db_schema_definitions.py  db_setup.py  db_setup_postgresql.py  db_setup_shared.py  db_setup_unified.py  error_utils.py  i18n.py  main.py  mcp_context.py  mcp_oauth_sse.py  mcp_oauth_templates.py  mcp_server.py  mcp_server_http.py  mcp_server_multiuser.py  mcp_server_oauth.py  mcp_server_simple.py  mcp_server_unified.py  mcp_sse_server.py  mcp_tool_router.py  mcp_tools.py  mcp_tools_optimized.py  migrate_add_short_ids.py  oauth_sequence_tracer.py  oauth_server.py  (+24 more)
.github/: copilot-instructions.md
assets/: custom.css
docs/: ERROR_LOGGING.md  OAUTH_SETUP.md  OAUTH_TOKEN_TESTING.md  POPULATION_README.md  README_AUTHENTICATION.md  README_MULTIUSER.md  SCHEMA_VALIDATION.md  TESTING_GUIDE.md
mcp_core/: README.md  __init__.py  pyproject.toml
mcp_core/auth/: __init__.py  oauth_handlers.py  oauth_server.py  user_manager.py
mcp_core/mcpnp/: __init__.py
mcp_core/mcpnp/auth/: user_manager.py
mcp_core/mcpnp/server/: unified_server.py
mcp_core/mcpnp/templates/: __init__.py
mcp_core/server/: __init__.py  context.py  unified_server.py
mcp_core/static/: oauth.css
mcp_core/templates/: oauth_templates.py
mcp_core/tests/: __init__.py  conftest.py  test_mcp_e2e.py  test_mcp_server_startup.py  test_mcp_transport_modes.py  test_mcp_unified_integration.py  test_oauth_redirect_uri_matching.py
templates/: base.html  household.html  index.html  landing.html  meal_plan.html  pantry.html  preferences.html  recipe_add.html  recipe_edit.html  recipe_view.html  recipes.html  unit_select_macro.html  units.html
templates/auth/: invite.html  login.html  profile.html  profile_simple.html  register.html
templates/oauth/: error.html  login.html  register.html
tests/: README.md  README_MCP_TESTS.md  run_mcp_tests.py  run_tests.py  test_flask_recipe_view.py  test_flask_user_registration.py  test_i18n.py  test_mcp_auth.py  test_mcp_e2e.py  test_mcp_e2e_multiuser.py  test_mcp_error_handling.py  test_mcp_integration.py  test_mcp_multiuser.py  test_mcp_server_startup.py  test_mcp_tool_routing.py  test_mcp_transport_modes.py  test_mcp_unified_integration.py  test_missing_ingredients.py  test_pantry_manager.py  test_short_id_utils.py  test_validation_logic.py
tests/configs/: claude_desktop_config.json  claude_desktop_config_remote.json
tests/mcp_tests/: __init__.py  test_direct_functions.py  test_interactive.py  test_scenarios.py
