[project]
name = "meal_mcp"
version = "0.1.0"
description = "Manage meal planning and pantry management using an LLM for business logic"
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.12.2",
    "pytest>=8.4.1",
    "psycopg2-binary>=2.9.0",
    "flask>=2.0.0",
    "werkzeug>=2.0.0",
    "gunicorn>=23.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = ["black>=24.3.0"]
