[project]
name = "meal_mcp"
version = "0.1.0"
description = "Manage meal planning and pantry management using an LLM for business logic"
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.1",
    "psycopg2-binary>=2.9.0",
    "flask>=2.0.0",
    "werkzeug>=2.0.0",
    "gunicorn>=23.0.0",
    "mcpnp",
    "beautifulsoup4>=4.13.4",
]

[project.optional-dependencies]
dev = ["black>=24.3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.uv.sources]
mcpnp = { git = "https://github.com/bobjansen/mcpnp.git" }
